# CustomStorage

./: .dockerignore  .gitignore  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README  README.md
apps/backend/application/: Cargo.toml
apps/backend/domain/: Cargo.toml
apps/backend/domain/src/: lib.rs  user.rs
apps/backend/domain/src/infrastructure/: mod.rs
apps/backend/domain/src/infrastructure/dto/: mod.rs
apps/backend/domain/src/infrastructure/dto/directories/: create_input_dto.rs  find_by_pearent_id_dto.rs  find_by_user_id_dto.rs  mod.rs
apps/backend/domain/src/infrastructure/dto/items/: find_by_directory_id_dto.rs  mod.rs
apps/backend/domain/src/infrastructure/interface/: db.rs  mod.rs  repository.rs
apps/backend/domain/src/infrastructure/interface/db/: db_interface.rs
apps/backend/domain/src/infrastructure/interface/repository/: directory_repository_interface.rs  items_repository_interface.rs  repository_interface.rs  session_repository_interface.rs  share_repository_interface.rs  token_repository_interface.rs  user_repository_interface.rs
apps/backend/domain/src/infrastructure/tests/: mod.rs  test_repositories.rs
apps/backend/domain/src/models/: mod.rs  user.rs
apps/backend/domain/src/models/interface/: mod.rs  user_interface.rs
apps/backend/domain/src/models/user/: entity.rs  value_object.rs
apps/backend/domain/src/user/: entity.rs  value_object.rs  value_object.test.rs
apps/backend/domain/src/value_object/: directory.rs  items.rs  mod.rs  service.rs  token.rs
apps/backend/domain/src/value_object/interface/: mod.rs  service_interface.rs
apps/backend/graphql/: schema.gql
apps/backend/infrastructure/: .env  Cargo.toml
apps/backend/infrastructure/src/: main.rs
apps/backend/infrastructure/src/auth/: mod.rs  token.rs  user.rs
apps/backend/infrastructure/src/db/migrations/: 20231217_init.sql  20231228_create_sessiontable.sql  20240115_create_directories_and_items_and_share_table.sql  20240128_alter_items_table.sql
apps/backend/infrastructure/src/db/persistence/: postgres.rs
apps/backend/infrastructure/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
apps/backend/infrastructure/src/graphql/resolver/: query.rs
apps/backend/infrastructure/src/graphql/schema/: auth.rs  mod.rs  service.rs  user_schema.rs
apps/backend/infrastructure/src/repository/: directories_repository.rs  irems_repository.rs  mod.rs  repository_impl.rs  session_repository.rs  share_repository.rs  token_repository.rs  user_repository.rs
apps/backend/infrastructure/src/setup/: mod.rs
apps/backend/infrastructure/src/test/: mod.rs  setup_testdb.rs  test_data.rs
apps/backend/src/: main.rs
apps/backend/usecase/: Cargo.toml
apps/backend/usecase/src/: lib.rs  usecase.rs
apps/backend/usecase/src/create_user/: mod.rs
apps/backend/usecase/src/interface/: mod.rs  user_usecase.rs
apps/backend/usecase/src/service/: usecase.rs
apps/backend/usecase/src/session/: usecase.rs
apps/backend/usecase/src/user/: get_user.rs  get_user_interactor.rs  mod.rs  usecase.rs  user_interface.rs
apps/frontend/: Dockerfile  biome.json  codegen.ts  graphql.schema.json  package.json  tsconfig.json
apps/frontend/.storybook/: preview.tsx
apps/frontend/src/app/: AuthCheckContents.tsx  LoginContents.tsx  layout.tsx  loading.tsx  page.tsx
apps/frontend/src/app/@header/: page.tsx
apps/frontend/src/app/[user]/[dir]/: page.tsx
apps/frontend/src/app/[user]/components/: CreateDirectory.tsx  (+1 more)
apps/frontend/src/app/home/: page.tsx
apps/frontend/src/app/hooks/: ProviderWrapper.tsx  index.ts
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/register/: page.tsx
apps/frontend/src/app/routes/: index.ts
apps/frontend/src/infrastructure/: URI.ts
apps/frontend/src/infrastructure/Query/: authorization.ts  backendUri.ts  useUserQuery.ts
apps/frontend/src/infrastructure/apollo/: apolloClient.ts
apps/frontend/src/infrastructure/graphql/: gql.ts  graphql.ts  requestBody.ts  schema.ts
nginx/: Dockerfile  default.conf  nginx.conf  node.conf
postgres/: .env.dev  Dockerfile
postgres/migrations/: 20231126_create_user_table.sql
postgres/sql/: create_user_table.sql
(+43 files in other folders)
