[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
async-graphql = "6.0.11"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
async-trait = "0.1.74"
mockall = { version = "0.12.1" }
chrono = { version = "0.4.31" }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dev-dependencies]
tokio = { version = "1.35.1" }
