[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
axum = { version = "0.6.20" }
async-graphql = "6.0.11"
sqlx = { version = "0.7.3", features = ["postgres"] }
domain = { path = "../domain" }
tokio = { version = "1.34.0", features = ["full"] }
http = { version = "1.0.0" }
tower = { version = "0.4.12" }
axum-login = "0.10.0"
password-auth = "1.0.0"
async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
hyper = "0.14"
