[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
axum = { version = "0.6.20" }
async-graphql = "6.0.11"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
domain = { path = "../domain" }
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.12" }
async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
hyper = "0.14"
tower-http = { version = "0.4.4", features = ["full"] }
bytes = { version = "1.0.1", features = ["serde"] }
dotenv = "0.15.0"
sqlx-cli = { version = "0.7.3", features = ["postgres"] }
mockall = { version = "0.12.0" }
futures-util = "0.3.17"
tracing = { version = "0.1.27" }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
